---
source: crates/service/tests/code_action/br_if_to_if_br.rs
expression: response
---
[
  {
    "title": "Convert `br_if` to `if` with `br`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 4
              },
              "end": {
                "line": 3,
                "character": 27
              }
            },
            "newText": "(if\n      (i32.const 0)\n      (then\n        (br 0)))"
          }
        ]
      }
    }
  }
]
